Add cache_size limit

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
   mongo:
     <<: *logging
     image: mongo
+    command: --wiredTigerEngineConfigString="cache_size=256M"
     volumes:
       - mongo:/data/db
     environment:
