--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
     ports:
       - 8081:8081
     environment:
+      - ME_CONFIG_MONGODB_URL=mongodb://root:${MONGO_PASSWORD}@mongo/
       - ME_CONFIG_MONGODB_ADMINUSERNAME=root
       - ME_CONFIG_MONGODB_ADMINPASSWORD=${MONGO_PASSWORD}
       - ME_CONFIG_BASICAUTH_USERNAME=root
